# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "akaia-avatar-rs"
version = "12025.0.1"
# dynamic = ["version"]
requires-python = ">=3.7"

classifiers = [
	"Programming Language :: Rust",
	"Programming Language :: Python :: Implementation :: CPython",
	"Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
	"mistralrs",
	# "flash-attn",
	# "nvcc",
	"transformers",
	"torch",
	"parler-tts @ git+https://github.com/huggingface/parler-tts.git@main",
]

[tool.hatch.build.targets.wheel]
packages = ["python/src"]

[tool.hatch.metadata]
allow-direct-references = true
